--- a/cliente.html
+++ b/cliente.html
@@ -249,7 +249,7 @@
         <div class="chatbox-messages" id="chatbox-messages"></div>
         <div class="chatbox-input">
           <input type="text" id="chat-input" placeholder="¿Cómo te sientes hoy?" />
-          <button onclick="sendMessage()">Enviar</button>
+          <button id="send-button" onclick="sendMessage()">Enviar</button>
         </div>
       </div>
 
@@ -316,20 +316,18 @@
     });
 
     async function getChatGPTResponse(message) {
-        const response = await fetch('/api/chat', {
+        const response = await fetch('https://my-chatgpt-backend.glitch.me/getChatGPTResponse', {
             method: 'POST',
             headers: {
-                'Content-Type': 'application/json'
+                'Content-Type': 'application/json',
             },
-            body: JSON.stringify({ message })
+            body: JSON.stringify({ message: message })
         });
-
         if (!response.ok) {
-            throw new Error('Error en la API de ChatGPT');
+            throw new Error(`Error en el servidor: ${response.statusText}`);
         }
-
-        const data = await response.json();
-        return data; // Asegúrate de que esto coincida con la estructura de tu respuesta
+        const data = await response.json(); // Asegúrate de que esto sea un objeto JSON
+        return data.response; // Devuelve solo el contenido de la respuesta
     }
 
     function typeMessage(text, sender) {
@@ -351,21 +349,25 @@
     }
 
     async function sendMessage() {
-    const input = document.getElementById('chat-input');
-    const message = input.value.trim();
-    if (!message) return;
-    appendMessage('user', message);
-    input.value = '';
+        const input = document.getElementById('chat-input');
+        const message = input.value.trim();
+        const sendButton = document.getElementById('send-button');
 
-    try {
-        const response = await getChatGPTResponse(message);
-        typeMessage(response, 'bot');
-    } catch (error) {
-        console.error("Error en la solicitud:", error);
-        appendMessage('bot', "Lo siento, ocurrió un error al procesar tu solicitud.");
+        if (!message) return; // No enviar si el input está vacío
+        appendMessage('user', message);
+        input.value = '';
+        sendButton.disabled = true; // Deshabilitar el botón de enviar
+
+        try {
+            const response = await getChatGPTResponse(message);
+            typeMessage(response, 'bot');
+        } catch (error) {
+            appendMessage('bot', "Lo siento, ocurrió un error al procesar tu solicitud.");
+            console.error("Error en la API de ChatGPT:", error);
+        } finally {
+            sendButton.disabled = false; // Habilitar el botón de enviar nuevamente
+        }
     }
-}
-
 
     function appendMessage(sender, text) {
         const container = document.getElementById('chatbox-messages');
@@ -429,7 +431,7 @@
             return;
         }
 
-        const user = firebase.auth().currentUser;
+        const user = firebase.auth().currentUser ;
         if (!user) {
             alert('Presione nuevamente para confirmar cita.');
             return;
@@ -468,6 +470,7 @@
       offsetX = e.clientX - mascota.getBoundingClientRect().left;
       offsetY = e.clientY - mascota.getBoundingClientRect().top;
       mascota.style.cursor = 'grabbing';
+      e.preventDefault(); // Evitar que la pantalla se desplace
     });
 
     document.addEventListener('mousemove', (e) => {
@@ -482,22 +485,22 @@
       }
     });
 
-    document.addEventListener('mouseup', () => {
+          document.addEventListener('mouseup', () => {
       isDragging = false;
       mascota.style.cursor = 'grab';
     });
 
     // Para dispositivos táctiles
-
     mascota.addEventListener('touchstart', (e) => {
       isDragging = true;
       const touch = e.touches[0];
       offsetX = touch.clientX - mascota.getBoundingClientRect().left;
       offsetY = touch.clientY - mascota.getBoundingClientRect().top;
       mascota.style.cursor = 'grabbing';
+      e.preventDefault(); // Evitar que la pantalla se desplace
     });
 
-document.addEventListener('touchmove', (e) => {
+    document.addEventListener('touchmove', (e) => {
       if (isDragging) {
         const touch = e.touches[0];
         const containerRect = document.querySelector('.container').getBoundingClientRect();
@@ -505,7 +508,6 @@ document.addEventListener('touchmove', (e) => {
         const newY = touch.clientY - offsetY - containerRect.top; // Ajustar la posición relativa al contenedor
 
         // Limitar el movimiento de la mascota dentro del contenedor
-
         mascota.style.left = `${Math.max(0, Math.min(containerRect.width - mascota.offsetWidth, newX))}px`;
         mascota.style.top = `${Math.max(0, Math.min(containerRect.height - mascota.offsetHeight, newY))}px`;
       }
